# LegendaryOS-Store

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs
src/: app_data.rs  bootc.rs  catalog.rs  flatpak.rs  main.rs  store_model.rs
ui/: store.slint
