[package]
name = "legendaryos-store"
version = "0.1.0"
edition = "2021"
authors = ["LegendaryOS Team"]
description = "LegendaryOS Store — Flatpak + bootc software center"

[dependencies]
# renderer-femtovg pulls glutin which fails on Wayland without EGL.
# renderer-software uses softbuffer (DRM/KMS/Wayland native) — no OpenGL needed.
# renderer-skia-vulkan is the fast path if Vulkan is available (optional).
#
# We deliberately EXCLUDE renderer-femtovg to avoid the glutin dependency.
slint = { version = "1.9", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "backend-winit-wayland",    # native wl_surface, no XWayland
    "backend-winit-x11",        # X11 fallback
    "renderer-software",        # softbuffer — works everywhere, no GPU required
] }

tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
