[package]
name = "legendaryos-store"
version = "0.2.0"
edition = "2021"
authors = ["LegendaryOS Team"]
description = "LegendaryOS Store — Flatpak + bootc software center v0.2"

[dependencies]
# renderer-software: no glutin, works natively on Wayland via softbuffer
slint = { version = "1.9", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "backend-winit-wayland",
    "backend-winit-x11",
    "renderer-software",
] }

tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
